# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginDTO"
+                            "$ref": "#/definitions/dto.AdminRequestDTO"
                         }
                     }
                 ],
@@ -37,7 +37,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_admin_adapters_drivers_rest.TokenDTO"
+                            "$ref": "#/definitions/handler.TokenDTO"
                         }
                     },
                     "400": {
@@ -71,7 +71,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin Domain"
+                    "Admin"
                 ],
                 "summary": "Register Admin",
                 "parameters": [
@@ -81,16 +81,18 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterDTO"
+                            "$ref": "#/definitions/dto.AdminRequestDTO"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Success message",
                         "schema": {
                             "type": "object",
-                            "additionalProperties": true
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "400": {
@@ -125,7 +127,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_customer_adapters_drivers_rest.TokenDTO"
+                            "$ref": "#/definitions/dto.TokenDTO"
                         }
                     },
                     "500": {
@@ -163,7 +165,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_customer_adapters_drivers_rest.TokenDTO"
+                            "$ref": "#/definitions/dto.TokenDTO"
                         }
                     },
                     "404": {
@@ -201,13 +203,13 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateCustomerDTO"
+                            "$ref": "#/definitions/dto.CustomerRequestDTO"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -235,7 +237,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get all orders",
+                "description": "Retrieve a list of all orders, optionally filtered by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -246,12 +248,19 @@
                     "Order Domain"
                 ],
                 "summary": "Get all orders",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Optional order ID filter",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/dto.OrderResponseListDTO"
                         }
                     },
                     "400": {
@@ -262,6 +271,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorDTO"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorDTO"
                         }
@@ -756,7 +771,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CheckPaymentDTO"
+                            "$ref": "#/definitions/dto.CheckPaymentRequestDTO"
                         }
                     }
                 ],
@@ -781,7 +796,22 @@
         }
     },
     "definitions": {
-        "dto.CheckPaymentDTO": {
+        "dto.AdminRequestDTO": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CheckPaymentRequestDTO": {
             "type": "object",
             "required": [
                 "resource",
@@ -796,7 +826,21 @@
                 }
             }
         },
-        "dto.CreateCustomerDTO": {
+        "dto.CreateOrderDTO": {
+            "type": "object",
+            "properties": {
+                "customer_id": {
+                    "type": "string"
+                },
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/internal_order_dto.OrderProductInfo"
+                    }
+                }
+            }
+        },
+        "dto.CustomerRequestDTO": {
             "type": "object",
             "properties": {
                 "cpf": {
@@ -810,20 +854,6 @@
                 }
             }
         },
-        "dto.CreateOrderDTO": {
-            "type": "object",
-            "properties": {
-                "customer_id": {
-                    "type": "string"
-                },
-                "products": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.OrderProductInfo"
-                    }
-                }
-            }
-        },
         "dto.ImageURLDTO": {
             "type": "object",
             "properties": {
@@ -832,17 +862,28 @@
                 }
             }
         },
-        "dto.LoginDTO": {
+        "dto.OrderDAO": {
             "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
             "properties": {
-                "email": {
+                "created_at": {
                     "type": "string"
                 },
-                "password": {
+                "customer_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "preparing_time": {
+                    "type": "integer"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "status": {
+                    "$ref": "#/definitions/enum.OrderStatus"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -861,6 +902,9 @@
         "dto.OrderPanelItemDTO": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
                 "order_number": {
                     "type": "string"
                 },
@@ -872,14 +916,14 @@
                 }
             }
         },
-        "dto.OrderProductInfo": {
+        "dto.OrderResponseListDTO": {
             "type": "object",
             "properties": {
-                "product_id": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
+                "orders": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.OrderDAO"
+                    }
                 }
             }
         },
@@ -977,17 +1021,10 @@
                 }
             }
         },
-        "dto.RegisterDTO": {
+        "dto.TokenDTO": {
             "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
             "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
+                "token": {
                     "type": "string"
                 }
             }
@@ -1018,6 +1055,23 @@
                 "Dessert"
             ]
         },
+        "enum.OrderStatus": {
+            "type": "string",
+            "enum": [
+                "awaiting_payment",
+                "received",
+                "in_preparation",
+                "ready",
+                "completed"
+            ],
+            "x-enum-varnames": [
+                "OrderStatusAwaitingPayment",
+                "OrderStatusReceived",
+                "OrderStatusInPreparation",
+                "OrderStatusReady",
+                "OrderStatusCompleted"
+            ]
+        },
         "errors.ErrorDTO": {
             "type": "object",
             "properties": {
@@ -1029,7 +1083,7 @@
                 }
             }
         },
-        "internal_admin_adapters_drivers_rest.TokenDTO": {
+        "handler.TokenDTO": {
             "type": "object",
             "properties": {
                 "token": {
@@ -1037,11 +1091,14 @@
                 }
             }
         },
-        "internal_customer_adapters_drivers_rest.TokenDTO": {
+        "internal_order_dto.OrderProductInfo": {
             "type": "object",
             "properties": {
-                "token": {
+                "product_id": {
                     "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
                 }
             }
         },
